--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ jmespath==0.10.0
 oauth2client==4.1.3
 Pillow==7.1.2
 protobuf==3.12.2
+psycopg2==2.8.5
 psycopg2-binary==2.8.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
